Fix copyright link overflow

--- a/assets/css/_common/_page/post.scss
+++ b/assets/css/_common/_page/post.scss
@@ -176,6 +176,7 @@
 
         .copyright-item {
             margin: 5px 0;
+            word-break: break-all;
         }
 
         .lincese {
